scrollbar custom fixed

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,6 +25,10 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+html {
+  color-scheme: dark;
+}
+
 .scrollbar-hidden {
   -ms-overflow-style: none;
   scrollbar-width: none;
@@ -32,4 +36,9 @@ body {
 
 .scrollbar-hidden::-webkit-scrollbar {
   display: none;
+}
+
+.scrollbar-custom { /*::-webkit-scrollbar {
+  /* display: none; */
+  scrollbar-color: #222222 #00000000;
 }
